Update SaveImageService.java
이미지를 저장 할 때 path와 DB에 저장할때의 path를 다르게 저장하도록 수정.
(html에서는 full path가 아닌 static 이후의 경로만 필요)